fix: autoComplete component suggestions overflow

--- a/src/components/AutoComplete/_style.scss
+++ b/src/components/AutoComplete/_style.scss
@@ -25,6 +25,9 @@
     cursor: pointer;
     transition: $menu-transition;
     color: $body-color;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     &.is-active {
       background: $menu-item-active-color !important;
       color: $white !important;
